--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "rm -rf docs && vite build && mv dist docs"
   },
   "dependencies": {
     "universal-router": "^10.0.0"
