--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "my-spa",
   "version": "1.0.0",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build && cp dist/index.html dist/404.html",
-    "preview": "vite preview",
-    "deploy": "rm -rf docs && npm run build && mv dist docs"
+  "dev": "vite",
+  "build": "vite build",
+  "preview": "vite preview"
   },
   "dependencies": {
     "universal-router": "^10.0.0"
